# UltraCurl

./: .gitmodules  CMakeLists.txt  Jenkinsfile  README.MD
CMakeModules/: CodeCoverage.cmake
include/: base_functionality.h  cli_args_helper.h  cli_helper.h  cli_progres.h  downloader_pool.h  http_downloader.h  network_socket.h  response.h  sockets.h  tcp_socket.h  tls_socket.h  uri.h
src/: base_functionality.cpp  cli_args_helper.cpp  cli_helper.cpp  cli_progres.cpp  http_downloader.cpp  main.cpp  network_socket.cpp  response.cpp  sockets.cpp  tcp_socket.cpp  tls_socket.cpp  uri.cpp
tests/: cli_helper_tests.cpp  downloader_tests.cpp  fake_socket.h  pool_tests.cpp  response_tests.cpp  test_socket.cpp  test_socket.h  uri_tests.cpp
